<resources>
    <string name="app_name">Lu_Acm_Navigator</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">email</string>
    <string name="confirm_password">confirm password</string>
    <string name="phone">phone</string>
    <string name="get_started">Get Started</string>
    <string name="stay_informed_about_contests_and_never_miss_your_chance_to_compete">Stay informed about contests and never miss your chance to compete!</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_admin">Welcome Admin</string>
    <string name="insert_contest">Insert Contest</string>
    <string name="add_contest">Add Contest</string>
    <string name="update_contest">Update Contest</string>
    <string name="delete_contest">Delete Contest</string>
    <string name="view_details">View Details</string>
    <string name="contest_link">Contest Link</string>
    <string name="contest_name">Contest name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="search_contest_by_name">Search Contest By Name</string>
    <string name="upcoming_contests">Upcoming Contests</string>
    <string name="view_contests">View Contests</string>
    <string name="contests">Contests</string>
</resources>