<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@drawable/background3"
    tools:context=".AdminActivity">
    <TextView
        android:id="@+id/admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_admin"
        android:textSize="35dp"
        android:layout_margin="50dp"
        android:textStyle="bold"
        android:gravity="center"/>
    <Button
        android:id="@+id/btn_view_details"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/view_contests"
        android:padding="20dp"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/btn_add_contest"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/add_contest"
        android:padding="20dp"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/btn_update_contest"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/update_contest"
        android:padding="20dp"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/btn_delete_contest"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/delete_contest"
        android:padding="20dp"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/btn_participation_list"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="Participation List"
        android:padding="20dp"
        android:layout_margin="10dp"/>






</LinearLayout>