<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".Welcome">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="25dp"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="20dp"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:gravity="center"/>
    <TextView
        android:id="@+id/welcome1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stay_informed_about_contests_and_never_miss_your_chance_to_compete"
        android:textSize="20dp"
        android:layout_margin="20dp"
        android:gravity="center"/>
    <Button
        android:id="@+id/btn_get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:layout_gravity="center"/>

</LinearLayout>