<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@drawable/background3"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="35dp"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:gravity="center"/>
    <EditText
        android:id="@+id/et_register_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Fullname"
        android:inputType="text"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@android:drawable/editbox_background"
        android:drawableLeft="@drawable/baseline_person_outline_24"
        android:drawablePadding="20dp">

    </EditText>
    <EditText
        android:id="@+id/et_register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@android:drawable/editbox_background"
        android:drawableLeft="@drawable/baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:autofillHints="Username"/>
    <EditText
        android:id="@+id/et_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@android:drawable/editbox_background"
        android:drawableLeft="@drawable/baseline_attach_email_24"
        android:drawablePadding="20dp"
        android:autofillHints="emailAddress"/>
    <EditText
        android:id="@+id/et_register_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:inputType="number"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@android:drawable/editbox_background"
        android:drawableLeft="@drawable/baseline_local_phone_24"
        android:drawablePadding="20dp"
        android:autofillHints="Phone"/>
    <EditText
        android:id="@+id/et_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@android:drawable/editbox_background"
        android:drawableLeft="@drawable/baseline_info_24"
        android:drawablePadding="20dp"
        android:autofillHints="Password"/>
    <EditText
        android:id="@+id/et_register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@android:drawable/editbox_background"
        android:drawableLeft="@drawable/baseline_info_24"
        android:drawablePadding="20dp"
        android:autofillHints="Password"/>

        <Button
            android:id="@+id/btn_sign_up_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:padding="10dp"
            android:layout_margin="10dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Already have an account?"
                android:textSize="15dp"/>

            <Button
                android:id="@+id/btn_sign_up_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:padding="10dp"
                android:backgroundTint="@android:color/primary_text_dark"
                android:textColor="@android:color/holo_purple"
                android:layout_margin="10dp"/>
        </LinearLayout>



</LinearLayout>