<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@drawable/background3"
    tools:context=".AddContestctivity">
    <TextView
        android:id="@+id/AddContest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Contest"
        android:textStyle="bold"
        android:textSize="24dp"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"/>
    <EditText
        android:id="@+id/contestName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contest_name"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp"
        android:inputType="text"
        android:background="@android:drawable/editbox_background" />
    <EditText
        android:id="@+id/contestlink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contest_link"
        android:minHeight="48dp"
        android:layout_marginBottom="16dp"
        android:inputType="textUri"
        android:background="@android:drawable/editbox_background"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:background="@android:drawable/editbox_background"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp"
        android:inputType="date" />
    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/time"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp"
        android:inputType="time"
        android:background="@android:drawable/editbox_background" />

    <Button
        android:id="@+id/btn_pick_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pick Date"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/holo_purple"
        android:backgroundTint="@color/white"/>

    <Button
        android:id="@+id/btn_pick_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pick Time"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/holo_purple"
       android:backgroundTint="@color/white" />

    <Button
        android:id="@+id/btn_add_contest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add Contest"
        android:padding="15dp"
        android:layout_marginBottom="10dp"/>




</LinearLayout>